# libimobiledevice-glue

./: .gitignore  Makefile.am  NEWS  README.md  configure.ac
.github/workflows/: build.yml
include/: Makefile.am
include/libimobiledevice-glue/: collection.h  glue.h  nskeyedarchive.h  opack.h  sha.h  sha1.h  sha2.h  socket.h  termcolors.h  thread.h  tlv.h  utils.h
src/: Makefile.am  cbuf.c  collection.c  common.h  glue.c  libimobiledevice-glue-1.0.pc.in  nskeyedarchive.c  opack.c  sha1.c  sha2.c  sha256.c  sha512.c  socket.c  termcolors.c  thread.c  tlv.c  utils.c
