nobase_include_HEADERS = \
	libimobiledevice-glue/socket.h \
	libimobiledevice-glue/thread.h \
	libimobiledevice-glue/utils.h \
	libimobiledevice-glue/collection.h \
	libimobiledevice-glue/termcolors.h \
	libimobiledevice-glue/sha1.h \
	libimobiledevice-glue/sha2.h \
	libimobiledevice-glue/fixedint.h 
