EXTRA_DIST = \
        endianness.h

nobase_include_HEADERS = \
	libimobiledevice-glue/socket.h \
	libimobiledevice-glue/thread.h \
	libimobiledevice-glue/utils.h \
	libimobiledevice-glue/collection.h \
	libimobiledevice-glue/termcolors.h \
	libimobiledevice-glue/cbuf.h \
	libimobiledevice-glue/opack.h \
	libimobiledevice-glue/tlv.h
